--- a/alcs-frontend/src/app/features/application/proposal/proposal.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/proposal.component.html
@@ -47,7 +47,7 @@
   <app-proposal-naru *ngIf="application && application.type.code === 'NARU'"></app-proposal-naru>
 </section>
 <section>
-  <h5>Application Parcels</h5>
+  <h5>Parcels</h5>
   <app-parcel-prep *ngIf="application" [fileNumber]="application.fileNumber"></app-parcel-prep>
 </section>
 <section>
