--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/expiry-date-input/expiry-date-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/expiry-date-input/expiry-date-input.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="turp-component-form">
+<form [formGroup]="form">
   <div class="grid-2">
     <mat-form-field appearance="outline">
       <mat-label>ALR Area Impacted (ha)</mat-label>
