Covenant Public View
* Add Public Covenant Proposal
* Send Transferees in the main request for Covenants

--- a/portal-frontend/src/app/features/public/application/public-application.component.html
+++ b/portal-frontend/src/app/features/public/application/public-application.component.html
@@ -45,6 +45,7 @@
               [applicationDocuments]="documents"
               [applicationSubmission]="submission"
               [applicationParcels]="parcels"
+              [transferees]="transferees"
             >
             </app-public-app-submission-details>
           </section>
