--- a/portal-frontend/src/app/features/public/application/submission/submission-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/submission-details.component.html
@@ -157,4 +157,10 @@
     [applicationSubmission]="applicationSubmission"
     [applicationDocuments]="applicationDocuments"
   ></app-incl-details>
+  <app-cove-details
+    *ngIf="applicationSubmission.typeCode === 'COVE'"
+    [applicationSubmission]="applicationSubmission"
+    [applicationDocuments]="applicationDocuments"
+    [transferees]='transferees'
+  ></app-cove-details>
 </section>
