--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div *ngIf="data.applicationDecisionComponentTypeCode === COMPONENT_TYPE.POFO" class="row-no-flex">
-    <app-pofo-input [form]="form"></app-pofo-input>
+    <app-app-pofo-input [form]="form"></app-app-pofo-input>
   </div>
 
   <div *ngIf="data.applicationDecisionComponentTypeCode === COMPONENT_TYPE.ROSO" class="row-no-flex">
