--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -8,6 +8,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title">
+        `
         <span class="margin-right">{{ cardTitle }}</span>
         <app-application-legacy-id [legacyId]="application.legacyId"></app-application-legacy-id>
         <app-application-type-pill [type]="application.type"></app-application-type-pill>
@@ -16,9 +17,7 @@
     <div class="center">
       <button color="accent" [matMenuTriggerFor]="moreActions" mat-flat-button>More Actions ▾</button>
       <mat-menu xPosition="before" #moreActions="matMenu">
-        <button [mat-dialog-close]="isDirty" [routerLink]="['application', application.fileNumber]" mat-menu-item>
-          View Detail
-        </button>
+        <button [mat-dialog-close]="isDirty" (click)="goToDetailpage()" mat-menu-item>View Detail</button>
         <button
           [mat-dialog-close]="isDirty"
           [routerLink]="['application', application.fileNumber, 'info-request']"
