--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -179,14 +179,14 @@
   </app-decision-components>
 
   <div>
-    <app-decision-conditions
+    <app-noi-decision-conditions
       *ngIf="codes && showComponents && showConditions"
       [codes]="codes"
       [components]="components"
       [conditions]="conditions"
       (conditionsChange)="onConditionsChange($event)"
       [showError]="form.touched && conditionUpdates.length < 1 && showConditions"
-    ></app-decision-conditions>
+    ></app-noi-decision-conditions>
   </div>
 
   <section>
