--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -93,6 +93,15 @@ a {
   max-height: 99vh !important;
 }
 
+.mat-mdc-cell {
+  font-size: rem(16);
+}
+
+.mat-mdc-header-cell {
+  font-size: rem(16);
+  font-weight: 700 !important;
+}
+
 .backdrop {
   background-color: rgba(255, 255, 255, 0.7);
 }
