--- a/portal-frontend/src/app/features/public/notification/submission/submission-details.component.scss
+++ b/portal-frontend/src/app/features/public/notification/submission/submission-details.component.scss
@@ -92,6 +92,7 @@
       padding: rem(16);
       margin: rem(24) 0 rem(40) 0;
       grid-template-columns: minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr);
+      grid-row-gap: rem(24);
 
       .full-width {
         grid-column: 1/5;
@@ -99,6 +100,7 @@
 
       .grid-double {
         grid-column: 2/5;
+        margin-bottom: unset;
       }
 
       .grid-1 {
@@ -111,6 +113,10 @@
 
       .grid-3 {
         grid-column: 3/5;
+      }
+
+      .edit-button {
+        grid-column: 1/5;
       }
     }
   }
