--- a/portal-frontend/src/app/features/public/application/submission/naru-details/naru-details.component.scss
+++ b/portal-frontend/src/app/features/public/application/submission/naru-details/naru-details.component.scss
@@ -1,9 +1,7 @@
-@use '../../../../../../styles/functions' as *;
-
 .soil-table {
   display: grid;
   grid-template-columns: max-content max-content;
   overflow-x: auto;
-  grid-column-gap: rem(36);
-  grid-row-gap: rem(12);
+  grid-column-gap: 36px;
+  grid-row-gap: 12px;
 }
