--- a/portal-frontend/src/app/features/public/application/submission/submission-details.component.scss
+++ b/portal-frontend/src/app/features/public/application/submission/submission-details.component.scss
@@ -72,10 +72,18 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
+    grid-template-columns: max-content max-content max-content;
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      grid-template-columns: 0.55fr 1fr 1fr;
+    }
+
+    @media screen and (min-width: $midBreakpoint) {
+      grid-template-columns: 1fr 1fr 2fr;
+    }
 
     .full-width {
       grid-column: 1/4;
@@ -87,7 +95,7 @@
     margin: rem(12) 0 rem(20) 0;
     background-color: colors.$grey-light;
     display: grid;
-    grid-row-gap: rem(24);
+    grid-row-gap: rem(4);
     grid-column-gap: rem(16);
     grid-template-columns: 1fr;
     word-wrap: break-word;
@@ -107,6 +115,14 @@
     }
 
     .subheading2 {
+      margin-bottom: 4px !important;
+    }
+
+    .grid-double {
+      margin-bottom: rem(16);
+    }
+
+    .subheading2 {
       margin-bottom: rem(4) !important;
     }
 
@@ -114,6 +130,7 @@
       padding: rem(16);
       margin: rem(24) 0 rem(40) 0;
       grid-template-columns: minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr);
+      grid-row-gap: rem(24);
 
       .full-width {
         grid-column: 1/5;
@@ -121,6 +138,7 @@
 
       .grid-double {
         grid-column: 2/5;
+        margin-bottom: unset;
       }
 
       .grid-1 {
